# rpg_ig_active_reconstruction

./: README.md
example/flying_gazebo_stereo_cam/: CMakeLists.txt  package.xml
example/flying_gazebo_stereo_cam/include/flying_gazebo_stereo_cam/: controller.hpp  pcl_rerouter.hpp  robot_communication_interface.hpp
example/flying_gazebo_stereo_cam/src/code_base/: controller.cpp  pcl_rerouter.cpp
example/flying_gazebo_stereo_cam/src/ros_nodes/: robot_interface.cpp
ig_active_reconstruction/: CMakeLists.txt  package.xml
ig_active_reconstruction/include/ig_active_reconstruction/: basic_view_planner.hpp  utility_calculator.hpp  view.hpp  weighted_linear_utility.hpp  world_representation_communication_interface.hpp  world_representation_pinhole_cam_raycaster.hpp  world_representation_raycaster.hpp
ig_active_reconstruction/src/code_base/: basic_view_planner.cpp  view.cpp  views_simple_view_space_module.cpp  weighted_linear_utility.cpp  world_representation_pinhole_cam_raycaster.cpp
ig_active_reconstruction_msgs/: CMakeLists.txt  package.xml
ig_active_reconstruction_octomap/: CMakeLists.txt  package.xml
ig_active_reconstruction_octomap/include/ig_active_reconstruction_octomap/: factory.hpp  octomap_basic_ray_ig_calculator.hpp  octomap_ig_calculator.hpp  octomap_ig_tree_node.hpp  octomap_information_gain.hpp  octomap_map_metric.hpp  octomap_occlusion_calculator.hpp  octomap_pcl_input.hpp  octomap_ray_occlusion_calculator.hpp  octomap_ros_interface.hpp  octomap_ros_pcl_input.hpp  octomap_std_pcl_input.hpp  octomap_std_pcl_input_point_xyz.hpp  octomap_world_representation.hpp
ig_active_reconstruction_octomap/src/code_base/: factory.inl  octomap_basic_ray_ig_calculator.inl  octomap_ig_calculator.inl  octomap_ig_tree.cpp  octomap_ig_tree_node.cpp  octomap_pcl_input.inl  octomap_ray_occlusion_calculator.inl  octomap_ros_interface.inl  octomap_ros_pcl_input.inl  octomap_world_representation.inl
ig_active_reconstruction_octomap/src/ros_nodes/: octomap_world_representation.cpp
ig_active_reconstruction_ros/: CMakeLists.txt  package.xml
ig_active_reconstruction_ros/include/ig_active_reconstruction_ros/: conversions.hpp  param_loader.hpp  robot_conversions.hpp  robot_ros_client_ci.hpp  robot_ros_server_ci.hpp  views_conversions.hpp  views_ros_client_ci.hpp  views_ros_server_ci.hpp  world_conversions.hpp  world_representation_ros_client_ci.hpp  world_representation_ros_server_ci.hpp  world_representation_ros_server_ci.inl  world_representation_ros_server_ci_boost.hpp
ig_active_reconstruction_ros/src/code_base/: conversions.cpp  robot_conversions.cpp  robot_ros_client_ci.cpp  robot_ros_server_ci.cpp  views_conversions.cpp  views_ros_client_ci.cpp  views_ros_server_ci.cpp  world_conversions.cpp  world_representation_ros_client_ci.cpp  world_representation_ros_server_ci.inl
ig_active_reconstruction_ros/src/ros_nodes/: basic_view_planner.cpp  simple_viewspace_module.cpp
movements/: CMakeLists.txt  package.xml
movements/include/movements/: circular_ground_path.h  kinematic_movement_description.h  relative_movement.h  ros_movements.h
movements/src/: combined_relative_movement.cpp  kinematic_movement_description.cpp  relative_movement.cpp  ros_movements.cpp
