<?xml version="1.0"?>
<package format="3">
  <name>ig_active_reconstruction_msgs</name>
  <version>0.9.0</version>
  <description>Custom messages for ig_active_reconstruction.</description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>rosbag</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>