<?xml version="1.0"?>
<package format="3">
  <name>ig_active_reconstruction_octomap</name>
  <version>0.9.0</version>
  <description>Package providing an octomap based world representation implementation for ig_active_reconstruction and ROS interfaces to go with it.
    
   "An Information Gain Formulation for Active Volumetric 3D Reconstruction"
   by S. Isler, R. Sabzevari, J. Delmerico and Davide Scaramuzza
   [IEEE International Conference on Robotics and Automation (ICRA), Stockholm, 2016]
   
   </description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>movements</depend>
  <depend>ig_active_reconstruction</depend>
  <depend>rclcpp</depend>
  <depend>ig_active_reconstruction_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>ig_active_reconstruction_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
