<?xml version="1.0"?>
<package format="3">
  <name>ig_active_reconstruction_ros</name>
  <version>0.9.0</version>
  <description>ROS nodes and classes for active 3D reconstruction. It uses the interfaces as defined in the paper
    
   "An Information Gain Formulation for Active Volumetric 3D Reconstruction"
   by S. Isler, R. Sabzevari, J. Delmerico and Davide Scaramuzza
   [IEEE International Conference on Robotics and Automation (ICRA), Stockholm, 2016]
   
   </description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ig_active_reconstruction_msgs</depend>
  <depend>ig_active_reconstruction</depend>
  <depend>movements</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>