<?xml version="1.0"?>
<package>
  <name>movements</name>
  <version>0.1.0</version>
  <description>Library for representing relative movements in space</description>
  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>