<?xml version="1.0"?>
<package format="3">
  <name>movements</name>
  <version>0.1.0</version>
  <description>Library for representing relative movements in space</description>
  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>cmake_modules</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>